cmd k z-index issue

--- a/apps/web-giddh/src/assets/css/global/header.scss
+++ b/apps/web-giddh/src/assets/css/global/header.scss
@@ -39,15 +39,26 @@
 }
 
 body {
-    &.cmd-k {
+    &.master-page,
+    .cmd-k {
         .cdk-overlay-container {
-            z-index: 9999 !important;
-        }
-        .cdk-overlay-backdrop {
-            z-index: 999;
-        }
-        .cdk-overlay-pane {
-            z-index: 99999;
+            z-index: 99999 !important;
         }
     }
 }
+// body {
+//     &.cmd-k {
+//         .cdk-overlay-container {
+//             z-index: 9999 !important;
+//             .cdk-global-overlay-wrapper{
+//                 z-index: 10001!important;
+//             }
+//         }
+//         .cdk-overlay-backdrop {
+//             z-index: 10000;
+//         }
+//         .cdk-overlay-pane {
+//             z-index: 99999;
+//         }
+//     }
+// }
